<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.capfinal.ui.reset_password.reset_phone_screen.PasswordResetFragment">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/caps_logo_margin_vertical"
        android:src="@drawable/custom_cap_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_recover_password"
        style="@style/TextViewRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextRecoveryPhone"
        android:layout_marginTop="223dp"
        android:layout_width="match_parent"
        android:layout_height="38dp" />

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_reset_password_note"
        style="@style/TextViewNoteBlank"
        android:layout_marginTop="267dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="68dp"
        android:text="@string/text_reset_password_send"
        style="@style/DefaultRegisterMaterialButton"
        android:layout_width="220dp"
        android:layout_height="56dp" />
</androidx.constraintlayout.widget.ConstraintLayout>