<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.capfinal.ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/custom_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/custom_cap_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/register_frag_mar_hor"
        android:layout_marginTop="@dimen/register_frag_mar_top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_cap">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/size_biggest_28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_dp"
            android:layout_marginTop="@dimen/view_margin_top"
            android:layout_marginBottom="@dimen/twenty_eight_and_half"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_height">

            <ImageView
                style="@style/IvEtStyle"
                android:src="@drawable/ic_gray_user"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/name"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_height">

            <ImageView
                style="@style/IvEtStyle"
                android:src="@drawable/ic_gray_phone"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/phone_number"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                tools:ignore="Autofill" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_height">

            <ImageView
                style="@style/IvEtStyle"
                android:src="@drawable/ic_gray_password"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/password"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"

                tools:ignore="Autofill" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_height">

            <ImageView
                style="@style/IvEtStyle"
                android:src="@drawable/ic_gray_password"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/confirm_password"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_the_password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_register_or_google_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                style="@style/BtnRegisterStyle"
                android:backgroundTint="@color/white"
                android:text="@string/register"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ll_margin_top"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/view_width"
                    android:layout_height="@dimen/half_dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/two_dp"
                    android:fontFamily="@font/sf_ui_text_regular"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_small_12sp" />

                <View
                    android:layout_width="@dimen/view_width"
                    android:layout_height="@dimen/half_dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ll_margin_top"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    android:layout_marginEnd="@dimen/fab_margin">

                    <Button
                        android:id="@+id/btn_facebook"
                        style="@style/GFBtnStyle"
                        android:background="@drawable/logo_facebook" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle">

                    <Button
                        android:id="@+id/btn_google"
                        style="@style/GFBtnStyle"
                        android:background="@drawable/logo_google" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ll_register_margin_top"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_text_regular"
                    android:text="@string/do_you_have_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_small_12sp" />

                <TextView
                    android:id="@+id/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_login_mar_start"
                    android:fontFamily="@font/sf_ui_text_regular"
                    android:text="@string/log_in"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/size_small_12sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/BtnRegisterStyle"
                android:layout_marginTop="@dimen/tv_login_mar_start"
                android:backgroundTint="@color/custom_yellow"
                android:text="@string/register"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>