<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp" />

    <View
        android:id="@+id/view_box"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/popular_types"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/size_big_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_box" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/appCompatImageButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/custom_black_5percent"
                app:cardCornerRadius="72dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_4_noname" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/appCompatImageButton2"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="19dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/custom_black_5percent"
                app:cardCornerRadius="72dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_2_adidas" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/appCompatImageButton3"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="19dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/custom_black_5percent"
                app:cardCornerRadius="72dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_1_nike" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/appCompatImageButton4"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/custom_black_5percent"
                app:cardCornerRadius="72dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_3_vans" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/sf_ui_text_regular"
                android:text="@string/new_era"
                android:textAlignment="center"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/size_small_12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="19dp"
                android:layout_weight="1"
                android:fontFamily="@font/sf_ui_text_regular"
                android:text="@string/adidas"
                android:textAlignment="center"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/size_small_12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="19dp"
                android:layout_weight="1"
                android:fontFamily="@font/sf_ui_text_regular"
                android:text="@string/nike"
                android:textAlignment="center"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/size_small_12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/sf_ui_text_regular"
                android:text="@string/vans"
                android:textAlignment="center"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/size_small_12sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/bestsellers"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/size_big_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/linkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/see_all"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/size_small_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBestsellers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        tools:listitem="@layout/item_home_bestsellers" />

    <View
        android:id="@+id/view"
        android:layout_width="345dp"
        android:layout_height="187dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewBestsellers" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/stocks"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/size_big_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/linkTextVie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/see_all"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/size_small_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewStocks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        tools:listitem="@layout/item_home_bestsellers" />
</androidx.constraintlayout.widget.ConstraintLayout>