<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.capfinal.ui.reset_password.reset_code_screen.PasswordResetCodeFragment">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/caps_logo_margin_vertical"
        android:src="@drawable/custom_cap_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_recover_password"
        style="@style/TextViewRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/tv_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_first"
                android:textAlignment="center"
                android:textSize="@dimen/size_biggest_28sp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:layout_width="30dp"
                android:layout_height="60dp" />

            <View
                android:background="@color/black"
                android:layout_width="30dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_second"
                android:textAlignment="center"
                android:textSize="@dimen/size_biggest_28sp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:layout_width="30dp"
                android:layout_height="60dp" />

            <View
                android:background="@color/black"
                android:layout_width="30dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_third"
                android:textAlignment="center"
                android:textSize="@dimen/size_biggest_28sp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:layout_width="30dp"
                android:layout_height="60dp" />

            <View
                android:background="@color/black"
                android:layout_width="30dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_fourth"
                android:textAlignment="center"
                android:textSize="@dimen/size_biggest_28sp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:layout_width="30dp"
                android:layout_height="60dp" />

            <View
                android:background="@color/black"
                android:layout_width="30dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_fifth"
                android:textAlignment="center"
                android:textSize="@dimen/size_biggest_28sp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:layout_width="30dp"
                android:layout_height="60dp" />

            <View
                android:background="@color/black"
                android:layout_width="30dp"
                android:layout_height="1dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_sixth"
                android:textAlignment="center"
                android:textSize="@dimen/size_biggest_28sp"
                android:background="@null"
                android:layout_width="30dp"
                android:layout_height="60dp" />

            <View
                android:background="@color/black"
                android:layout_width="30dp"
                android:layout_height="1dp" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_note"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_reset_password_note_2"
        style="@style/TextViewNoteBlank"
        android:layout_marginTop="317dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="68dp"
        android:text="@string/text_reset_password_send"
        style="@style/DefaultRegisterMaterialButton"
        android:layout_width="220dp"
        android:layout_height="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>